added heading and blogs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My firstever github repo</title>
+    <style>
+        p{
+            color:crimson;
+            font-weight: 900;
+            text-align: justify;
+            background-color: aqua;
+            padding: 30px;
+            border: 10px;
+            border-color:darkred;
+            margin-top: 50px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <h3 style= "color: blueviolet; text-align: center; background-color: darksalmon;">My first website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore officia dolor itaque neque nesciunt, omnis explicabo in, eaque numquam, dolores minus est. Quaerat illo velit quos vitae, numquam omnis cum!</p>
+    </div>
 </body>
 </html>
