--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My firstever github repo</title>
+    <link rel="stylesheet" href="Mystyle/myrepstyles.css">
     <style>
         p{
             color:crimson;
@@ -21,6 +22,10 @@
     <div>
         <h3 style= "color: blueviolet; text-align: center; background-color: darksalmon;">My first website</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore officia dolor itaque neque nesciunt, omnis explicabo in, eaque numquam, dolores minus est. Quaerat illo velit quos vitae, numquam omnis cum!</p>
+    </div>
+    <div>
+        <h4 class="head">My second paragraph</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores inventore, repudiandae eos quod deleniti reiciendis alias, minus recusandae nemo iste fugiat numquam officia cum soluta. Debitis porro temporibus veritatis?</p>
     </div>
 </body>
 </html>
