added a photo of itachi

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
         <h4 class="head">My second paragraph</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores inventore, repudiandae eos quod deleniti reiciendis alias, minus recusandae nemo iste fugiat numquam officia cum soluta. Debitis porro temporibus veritatis?</p>
     </div>
+    <div>
+        <h3 class="itachi">The boy who handled adults problem- "Itachi Uchiha"</h3>
+        <img src="Mystyle/Itachi.jpg" alt="A picture of the legend Itachi Uchiha">
+    </div>
 </body>
 </html>
